[gd_scene load_steps=22 format=3 uid="uid://du42s358k7p51"]

[ext_resource type="Script" path="res://scenes/bat_enemy/bat_enemy.gd" id="1_b6t3m"]
[ext_resource type="PackedScene" uid="uid://dihkw0f4mxuni" path="res://scenes/components/health_component.tscn" id="2_34ilt"]
[ext_resource type="PackedScene" uid="uid://k2vi3tgnsljf" path="res://scenes/components/velocity_component.tscn" id="3_j3a2x"]
[ext_resource type="PackedScene" uid="uid://du3mjc48j78l1" path="res://scenes/components/vial_drop_component.tscn" id="4_qmoy1"]
[ext_resource type="PackedScene" uid="uid://be6lcen6mlnue" path="res://scenes/components/hit_flash_component.tscn" id="5_thxi8"]
[ext_resource type="Shader" path="res://scenes/components/hit_flash_component.gdshader" id="6_a8u55"]
[ext_resource type="PackedScene" uid="uid://dbj270lqnkmrb" path="res://scenes/components/death_component.tscn" id="7_l2v0e"]
[ext_resource type="PackedScene" uid="uid://cjvcpikiuv7hn" path="res://scenes/components/random_stream_player_2d_component.tscn" id="8_o1w4u"]
[ext_resource type="AudioStream" uid="uid://5r3c0xdewvsf" path="res://assets/audio/footstep_carpet_000.ogg" id="9_ljhjt"]
[ext_resource type="AudioStream" uid="uid://de2b1ympw4a7p" path="res://assets/audio/footstep_carpet_001.ogg" id="10_mvasi"]
[ext_resource type="AudioStream" uid="uid://h7yxb15c6vqr" path="res://assets/audio/footstep_carpet_002.ogg" id="11_humqt"]
[ext_resource type="AudioStream" uid="uid://b30b6drd6qm7v" path="res://assets/audio/footstep_carpet_003.ogg" id="12_lpvd3"]
[ext_resource type="AudioStream" uid="uid://cjyll2tbi1qa3" path="res://assets/audio/footstep_carpet_004.ogg" id="13_cm242"]
[ext_resource type="Texture2D" uid="uid://cic66qwofr0u6" path="res://scenes/bat_enemy/bat.png" id="14_332fo"]
[ext_resource type="PackedScene" uid="uid://b7kxrfy2gexw1" path="res://scenes/components/hurt_box_component.tscn" id="15_xg1tn"]

[sub_resource type="Animation" id="Animation_efxo8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -8)]
}

[sub_resource type="Animation" id="Animation_kgkwa"]
resource_name = "fly"
length = 0.4
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.174533, 0.0, -0.174533]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(2, 1),
"update": 0,
"values": [Vector2(0, -11), Vector2(0, -5)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_75pg3"]
_data = {
"RESET": SubResource("Animation_efxo8"),
"fly": SubResource("Animation_kgkwa")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_dx3iy"]
resource_local_to_scene = true
shader = ExtResource("6_a8u55")
shader_parameter/lerp_percent = 0.0

[sub_resource type="CircleShape2D" id="CircleShape2D_7xoyf"]
radius = 8.0

[sub_resource type="CircleShape2D" id="CircleShape2D_t6qxx"]
radius = 4.0

[node name="BatEnemy" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 8
collision_mask = 9
motion_mode = 1
script = ExtResource("1_b6t3m")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "fly"
libraries = {
"": SubResource("AnimationLibrary_75pg3")
}

[node name="HealthComponent" parent="." instance=ExtResource("2_34ilt")]
max_health = 30

[node name="VelocityComponent" parent="." instance=ExtResource("3_j3a2x")]
max_speed = 110.0
acceleration = 0.75

[node name="VialDropComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("4_qmoy1")]
drop_percent = 0.4
health_component = NodePath("../HealthComponent")

[node name="HitFlashComponent" parent="." node_paths=PackedStringArray("health_component", "sprite") instance=ExtResource("5_thxi8")]
health_component = NodePath("../HealthComponent")
sprite = NodePath("../Visuals/Sprite2D")
hit_flash_material = SubResource("ShaderMaterial_dx3iy")

[node name="DeathComponent" parent="." node_paths=PackedStringArray("health_component", "sprite") instance=ExtResource("7_l2v0e")]
health_component = NodePath("../HealthComponent")
sprite = NodePath("../Visuals/Sprite2D")

[node name="RandomStreamPlayer2DComponent" parent="." instance=ExtResource("8_o1w4u")]
streams = Array[AudioStream]([ExtResource("9_ljhjt"), ExtResource("10_mvasi"), ExtResource("11_humqt"), ExtResource("12_lpvd3"), ExtResource("13_cm242")])

[node name="Visuals" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Visuals"]
position = Vector2(0, -8)
texture = ExtResource("14_332fo")

[node name="HurtBoxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("15_xg1tn")]
position = Vector2(0, -7)
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBoxComponent"]
shape = SubResource("CircleShape2D_7xoyf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -4)
shape = SubResource("CircleShape2D_t6qxx")

[connection signal="hit" from="HurtBoxComponent" to="." method="_on_hurt_box_component_hit"]
